# LOGI4-W-Firmware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  hardware_test.cpp  hardware_test.h  main.cpp  wifiCredentials.h
main/CLibFiles/: System.h
main/CLibFiles/DateTime/: Date.c  Date.h  DateTime.c  DateTime.h  Time.c  Time.h  WeeklySchedule.c  WeeklySchedule.h
main/CLibFiles/DateTime/Test/: Test_Date.cpp  Test_Date.h  Test_DateTime.cpp  (+3 more)
main/CLibFiles/System/: ArraySize.h  Metadata.h  StringLength.h  Version.c  Version.h
main/MQTT/: AwsIotClient.cpp  AwsIotClient.h  AwsIotConfig.cpp  AwsIotConfig.h  AwsIotJobsHandler.cpp  AwsIotJobsHandler.h  AwsIotManager.cpp  AwsIotManager.h  DeviceShadowState.h  IAwsIotClient.h  ShadowParser.cpp  ShadowParser.h
main/StateMachines/: ApplicationStateMachine.cpp  ApplicationStateMachine.h  CheckFillDetectStateMachine.cpp  CheckFillDetectStateMachine.h  DataSampleStateMachine.cpp  DataSampleStateMachine.h  PostingStateMachine.cpp  PostingStateMachine.h  ProvisioningStateMachine.cpp  ProvisioningStateMachine.h  ScheduleCheckStateMachine.cpp  ScheduleCheckStateMachine.h  StatesCommon.h  WakeStateMachine.cpp  WakeStateMachine.h
main/UDP/: UdpTelemetryClient.cpp  UdpTelemetryClient.h
main/drivers/: AdcAds1015.cpp  AdcAds1015.h  AnalogLevelSensor.cpp  AnalogLevelSensor.h  GPSModuleYIC51009EBGGB.cpp  GPSModuleYIC51009EBGGB.h  LevelSensorI2c9705.cpp  LevelSensorI2c9705.h  NvsSettingsService.cpp  NvsSettingsService.h  RgbLedPartNumberIs31fl3193.cpp  RgbLedPartNumberIs31fl3193.h  TemperatureSensorSht4x.cpp  TemperatureSensorSht4x.h
main/hal/: EspAdcWrapper.cpp  EspAdcWrapper.h  EspAdcWrapperConfig.h  EspAwsIoTClient.cpp  EspAwsIotClient.h  EspBluetoothManager.cpp  EspBluetoothManager.h  EspBoardUtils.cpp  EspBoardUtils.h  EspGpioWrapper.cpp  EspGpioWrapper.h  EspI2cMasterConfig.h  EspI2cMasterWrapper.cpp  EspI2cMasterWrapper.h  EspNetworkManager.cpp  EspNetworkManager.h  EspNvsStorage.cpp  EspNvsStorage.h  EspPlatform.cpp  EspPlatform.h  EspPowerManager.cpp  EspPowerManager.h  EspTimeKeeper.cpp  EspTimeKeeper.h  EspUartWrapper.cpp  EspUartWrapper.h
main/helpers/: MovingAverage.cpp  MovingAverage.h
main/interfaces/: IAdcHal.h  IAdvertiserCallbacks.h  IAwsIoTClient.h  IBluetoothManager.h  IBoardUtils.h  IGpioHal.h  II2cHal.h  INetworkManager.h  IPowerManager.h  ISettingsService.h  IStorage.h  ITimeKeeper.h
main/logi/: DeviceSettings.cpp  DeviceSettings.h  EspLogiHardwareFactory.cpp  EspLogiHardwareFactory.h  Faults.cpp  Faults.h  ILogiHardwareDriver.h  LogiHardwareDriver.cpp  LogiHardwareDriver.h  LogiSensorData.h  ResetCounter.cpp  ResetCounter.h
(+12 files in other folders)
